dft_256/dft_v3/solution1/csim/report/dft_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../dft_test.cpp in debug mode
csim.mk:73: recipe for target 'obj/dft_test.o' failed
In file included from D:/Xilinx/Vitis_HLS/2022.1/include/floating_point_v7_0_bitacc_cmodel.h:144:0,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_fpo.h:189,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half_fpo.h:64,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half.h:71,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/etc/ap_private.h:98,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_common.h:710,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:56,
                 from ../../../dft.h:1,
                 from ../../../dft_test.cpp:14:
D:/Xilinx/Vitis_HLS/2022.1/include/gmp.h:63:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from D:/Xilinx/Vitis_HLS/2022.1/include/hls_fpo.h:189:0,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half_fpo.h:64,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/hls_half.h:71,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/etc/ap_private.h:98,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_common.h:710,
                 from D:/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:56,
                 from ../../../dft.h:1,
                 from ../../../dft_test.cpp:14:
D:/Xilinx/Vitis_HLS/2022.1/include/floating_point_v7_0_bitacc_cmodel.h:136:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../dft_test.cpp: In function 'int main()':
../../../dft_test.cpp:49:13: error: no match for 'operator=' (operand types are 'DTYPE' and 'int')
   In_R[i] = i;
             ^
In file included from ../../../dft_test.cpp:14:0:
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(const DTYPE&)
 struct DTYPE
        ^~~~~
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'int' to 'const DTYPE&'
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(DTYPE&&)
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'int' to 'DTYPE&&'
../../../dft_test.cpp:50:13: error: no match for 'operator=' (operand types are 'DTYPE' and 'double')
   In_I[i] = 0.0;
             ^~~
In file included from ../../../dft_test.cpp:14:0:
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(const DTYPE&)
 struct DTYPE
        ^~~~~
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'double' to 'const DTYPE&'
../../../dft.h:3:8: note: candidate: DTYPE& DTYPE::operator=(DTYPE&&)
../../../dft.h:3:8: note:   no known conversion for argument 1 from 'double' to 'DTYPE&&'
../../../dft_test.cpp:63:34: error: invalid cast from type 'DTYPE' to type 'float'
   rmse_R.add_value((float)Out_R[i] - gold_R);
                                  ^
../../../dft_test.cpp:64:34: error: invalid cast from type 'DTYPE' to type 'float'
   rmse_I.add_value((float)Out_I[i] - gold_I);
                                  ^
make: *** [obj/dft_test.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
